<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <include layout="@layout/layout_toolbar" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/qb_px_70"
            android:layout_height="@dimen/qb_px_70"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/qb_px_30"
            android:background="#3CAAFC" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/qb_px_26"
        android:layout_marginRight="@dimen/qb_px_26"
        android:layout_marginTop="@dimen/qb_px_60"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/phone86"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size" />

        <com.foorich.auscashier.view.MClearEditText
            android:id="@+id/et_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/import_phone"
            android:inputType="number"
            android:maxLength="11"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size"
            app:mClearEditText_showBottomLine="false" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="@dimen/qb_px_26"
        android:layout_marginRight="@dimen/qb_px_26"
        android:layout_marginTop="@dimen/qb_px_10"
        android:background="@color/button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/qb_px_26"
        android:layout_marginRight="@dimen/qb_px_26"
        android:layout_marginTop="@dimen/qb_px_25"
        android:gravity="center"
        android:orientation="horizontal">


        <com.foorich.auscashier.view.MClearEditText
            android:id="@+id/et_pd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/password"
            android:maxLength="12"
            android:password="true"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size"
            app:mClearEditText_showBottomLine="false" />

        <TextView
            android:id="@+id/tv_forget_pd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/forget_password"
            android:textColor="#3CAAFC"
            android:textSize="@dimen/small_size" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="@dimen/qb_px_26"
        android:layout_marginRight="@dimen/qb_px_26"
        android:layout_marginTop="@dimen/qb_px_10"
        android:background="@color/button" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qb_px_40"
        android:background="@mipmap/button1"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/title_size" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="28dp"
            android:text="@string/register"
            android:textColor="#3CAAFC"
            android:textSize="@dimen/small_size" />

    </RelativeLayout>


</LinearLayout>