<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qb_px_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="@dimen/titleTop_size"
            android:textStyle="bold" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/qb_px_26"
        android:layout_marginRight="@dimen/qb_px_26"
        android:layout_marginTop="@dimen/qb_px_58"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/phone86"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size" />

        <com.foorich.auscashier.view.MClearEditText
            android:id="@+id/et_r_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/import_phone"
            android:inputType="number"
            android:maxLength="11"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size"
            app:mClearEditText_showBottomLine="false" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="@dimen/qb_px_26"
        android:layout_marginRight="@dimen/qb_px_26"
        android:layout_marginTop="@dimen/qb_px_10"
        android:background="@color/button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/qb_px_26"
        android:layout_marginRight="@dimen/qb_px_26"
        android:layout_marginTop="@dimen/qb_px_25"
        android:gravity="center"
        android:orientation="horizontal">


        <com.foorich.auscashier.view.MClearEditText
            android:id="@+id/et_r_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/import_verification"
            android:inputType="number"
            android:maxLength="6"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size"
            app:mClearEditText_showBottomLine="false" />

        <TextView
            android:id="@+id/tv_r_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/get_code"
            android:textColor="#3CAAFC"
            android:textSize="@dimen/small_size" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="@dimen/qb_px_26"
        android:layout_marginRight="@dimen/qb_px_26"
        android:layout_marginTop="@dimen/qb_px_10"
        android:background="@color/button" />

    <Button
        android:id="@+id/btn_r_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qb_px_40"
        android:background="@mipmap/button1"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:textSize="@dimen/title_size" />

    <LinearLayout
        android:id="@+id/tv_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/qb_px_20"
        android:layout_marginRight="@dimen/qb_px_26"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="继续即表示您同意"
            android:textColor="@color/black"
            android:textSize="@dimen/small_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="《祥付宝支付服务协议》"
            android:textColor="#3CAAFC"
            android:textSize="@dimen/small_size" />

    </LinearLayout>


</LinearLayout>