<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <com.foorich.auscashier.view.FlexibleScrollView
        android:layout_width="match_parent"

        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/Li_people"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/qb_px_20"
                android:layout_marginRight="@dimen/qb_px_20"
                android:layout_marginTop="@dimen/qb_px_5"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_per_pic"
                    android:layout_width="@dimen/qb_px_50"
                    android:layout_height="@dimen/qb_px_50"
                    android:layout_weight="0.1"
                    android:src="@mipmap/sy_ewm_tx" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_per_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="仝仝"
                        android:textColor="@color/black"
                        android:textSize="@dimen/function_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_per_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/qb_px_3"
                        android:text="186****9900"
                        android:textColor="@color/black" />


                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/qb_px_10"
                android:layout_marginRight="@dimen/qb_px_10"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/li_print"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@mipmap/wd_lsdt"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/qb_px_36"
                        android:layout_height="@dimen/qb_px_36"
                        android:layout_margin="@dimen/qb_px_5"
                        android:src="@mipmap/wd_skm" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/my_collection_code"
                            android:textColor="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/print_offline_collection"
                            android:textColor="@color/white" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/li_financing"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@mipmap/wd_csdt"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/qb_px_36"
                        android:layout_height="@dimen/qb_px_36"
                        android:layout_margin="@dimen/qb_px_5"
                        android:src="@mipmap/wd_wyrz" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/finance"
                            android:textColor="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Safe_and_fast_application"
                            android:textColor="@color/white" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


            <ListView
                android:id="@+id/lv_per"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/qb_px_5"
                android:divider="#00000000"
                android:dividerHeight="0dp" />

        </LinearLayout>
    </com.foorich.auscashier.view.FlexibleScrollView>

</LinearLayout>