<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dodgerblue"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/qb_px_20"
        android:background="@color/dodgerblue"
        android:gravity="center">

        <ImageView
            android:id="@+id/img_pay_back"
            android:layout_width="@dimen/qb_px_40"
            android:scaleType="centerInside"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:src="@mipmap/fh_w"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/tv_pay_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="@dimen/title_content" />


        <ImageView
            android:id="@+id/toolbar_right"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="14dp"
            android:src="@mipmap/sy_xx"
            android:visibility="invisible"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/toolbar_text_right"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="56dp"
            tools:ignore="RtlCompat" />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_434"
        android:layout_marginLeft="@dimen/qb_px_21"
        android:layout_marginRight="@dimen/qb_px_21"
        android:layout_marginTop="@dimen/qb_px_19"
        android:background="@drawable/gathering_code_bg">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/qb_px_21"
            android:layout_marginRight="@dimen/qb_px_21"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/complete_pay"
            android:textColor="@color/black"
            android:textSize="@dimen/title_content" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/qb_px_210"
            android:layout_height="@dimen/qb_px_210"
            android:layout_below="@+id/textView8"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/qb_px_19" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/save_image"
            android:textColor="#0A97FA"
            android:textSize="@dimen/qb_px_14" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_60"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/gathering_code_bottom_bg"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/collection_record"
                android:textColor="@color/black"
                android:textSize="@dimen/qb_px_14" />

        </RelativeLayout>


    </RelativeLayout>


</LinearLayout>
